--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
