--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mitt": "^3.0.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
