--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@vee-validate/i18n": "^4.5.10",
+    "@vee-validate/rules": "^4.5.10",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^5.0.3",
