--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
+    "swiper": "^8.0.7",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.3"
