--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^8.0.7",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
