--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-awesome-swiper": "^5.0.1",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^5.0.3",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
