--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.2",
     "@vee-validate/i18n": "^4.5.10",
     "@vee-validate/rules": "^4.5.10",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
@@ -20,11 +21,9 @@
     "swiper": "^8.0.7",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
-    "vue-awesome-swiper": "^5.0.1",
     "vue-axios": "^3.4.1",
     "vue-loading-overlay": "^5.0.3",
-    "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.2"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
